--- a/blueprints/site/templates/site/division.html
+++ b/blueprints/site/templates/site/division.html
@@ -28,5 +28,5 @@
 </div>
 </div>
 </div>
-<a href="{{ url_for('.division', lpu_id=lpu_id) }}" class="btn btn-primary btn-large">Вернуться</a>
+<a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">Вернуться</a>
 {% endblock %}
