--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -1,14 +1,18 @@
-{% extends "base.html" %}
+{% extends "site/base.html" %}
 
 {% block content %}
+{% set policy_type = session.get('document', dict()).get('policy_type') %}
+{% set document_code = session.get('document', dict()).get('document_code') %}
+{% set series = session.get('document', dict()).get('series') %}
+{% set number = session.get('document', dict()).get('number') %}
 <div class="row-fluid">
 <div class="span10 offset1 no_print">
 <table class="no_shadow_print table">
     <thead>
-    <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</h4></th></tr>
+    <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ session.get('ticket_uid', '') }}</h4></th></tr>
     </thead>
-    <tr><th>ФИО (Пациент):</th><td colspan="2">{{ patientName }}</td></tr>
-    <tr><th>Дата рождения:</th><td colspan="2">{{ birthday }} г.</td></tr>
+    <tr><th>ФИО (Пациент):</th><td colspan="2">{{ session.get('patient', {}).get('name', '') }}</td></tr>
+    {% if session.get('patient', {}).get('birthday') %}<tr><th>Дата рождения:</th><td colspan="2">{{ session.get('patient', {}).get('birthday', '') }} г.</td></tr>{% endif %}
     {% if client_id %}
     <tr><th>№ Амбулаторной карты:</th><td colspan="2">{{ client_id }}</td></tr>
     {% else %}
@@ -26,9 +30,12 @@
     {% endif %}
     {% endif %}
     <tr><th colspan="3"><h4>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h4></th></tr>
-    <tr><th>Лечебное учреждение:</th><td colspan="2">{{ current_lpu_title }},<br/>{{ address }},<br/>телефон: {{ current_lpu_phone }}</td></tr>
-    <tr><th>Врач:</th><td colspan="2">{{ doctor }}<br/>({{ speciality }})</td></tr>
-    <tr><th>Дата и время приёма:</th><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
+    <tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }},<br/>{% if lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %},<br/>телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
+    <tr><th>Врач:</th><td colspan="2">
+        {% set doctor=session.get('doctor') %}
+        {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}<br/>({{ doctor.get('speciality') }})
+    </td></tr>
+    <tr><th>Дата и время приёма:</th><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
     <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
     <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
@@ -37,10 +44,8 @@
 <div class="no_print" class="form-horizontal">
     <div class="row-fluid no_print">
         <div class="span1 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();">Распечатать</button></div>
-        <div class="span1 offset10 no_print"><a href="/" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём">Готово</a></div>
+        <div class="span1 offset10 no_print"><a href="{{ url_for('.index') }}" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём">Готово</a></div>
     </div>
-
-
 </div>
 </div>
 </div>
