--- a/blueprints/site/templates/site/_ticket.html
+++ b/blueprints/site/templates/site/_ticket.html
@@ -1,9 +1,13 @@
-<table>
+<table class="table">
+<thead>
 <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
+</thead>
+<tbody>
 <tr><td>Лечебное учреждение:</td><td colspan="2">{{ lpu.name }}, {% if lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %}, телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
 <tr><td>Врач:</td><td colspan="2">
     {% set doctor=session.get('doctor') %}
     {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }} ({{ doctor.get('speciality') }})
 </td></tr>
 <tr><td>Дата и время приёма:</td><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
+</tbody>
 </table>
