--- a/blueprints/site/templates/site/dequeue.html
+++ b/blueprints/site/templates/site/dequeue.html
@@ -2,17 +2,18 @@
 
 {% block content %}
 <legend>Отмена записи на приём</legend>
-<div class="well well-small">{{ ticket.info|safe }}</div>
+<div class="well well-small">{{ ticket_info|safe }}</div>
 {% with errors = get_flashed_messages(category_filter=["error"]) %}
   {% if errors %}
     <div class="alert alert-error" title="Ошибка записи">
         <strong>Ошибка записи!</strong>
         <ul class="unstyled">
         {% for error in errors %}
-          <li>{{ error }}</li>
+          <li>{{ error|safe }}</li>
         {% endfor %}
         </ul>
     </div>
+    <p><a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">На главную</a></p>
   {% endif %}
 {% endwith %}
 {% with messages = get_flashed_messages(category_filter=["success"]) %}
@@ -24,6 +25,7 @@
         {% endfor %}
         </ul>
     </div>
+    <p><a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">На главную</a></p>
   {% endif %}
 {% endwith %}
 {% if request.method == 'GET' %}
@@ -32,5 +34,4 @@
 <button type="submit" class="btn btn-danger">Отменить запись</button> <a href="{{ url_for('.index') }}" class="btn">Не отменять</a>
 </form>
 {% endif %}
-{#<a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">На главную</a>#}
 {% endblock %}
