Printable styles for links

--- a/blueprints/site/static/css/print.css
+++ b/blueprints/site/static/css/print.css
@@ -1,3 +1,6 @@
 div.no_print {display: none;}
 table.no_shadow_print {box-shadow: none;}
 table.no_shadow_print tr td {font-size: 18px;}
+a[href]:after {
+    content: none!important;
+}
