--- a/blueprints/site/templates/site/_header.html
+++ b/blueprints/site/templates/site/_header.html
@@ -11,7 +11,7 @@
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-responsive.min.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}" media="screen" />
-<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/print.css') }}" media="print" />
+<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/print.css?1') }}" media="print" />
 <!--[if IE 6]>
     <link type="text/css" href="{{ url_for('.static', filename='css/ie6.min.css') }}" rel="stylesheet">
 <![endif]-->
