Change debugging js in IE8

--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Электронная регистратура{% endblock %}</title>
 
-		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.3.min.js"></script>
 {#		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-ui-1.9.1.custom.min.js"></script>#}
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery.placeholder.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/scripts.js?5"></script>
@@ -26,7 +26,7 @@
         <!--[if IE]>
            <script type="text/javascript" src="{{ STATIC_URL }}/static/js/respond.min.js"></script>
         <![endif]-->
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css?2" media="screen" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" media="screen" />
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/print.css" media="print" />
 	</head>
 	<body>
