--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Электронная регистратура{% endblock %}</title>
 
-		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.3.min.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.3.js"></script>
 {#		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-ui-1.9.1.custom.min.js"></script>#}
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery.placeholder.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/scripts.js?5"></script>
