--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -19,6 +19,9 @@
     {% if policy_type == '2' or policy_type == '4' %}
     <tr><th>Полис ОМС:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
+    {% if policy_type == '1' %}
+    <tr><th>Полис ОМС (временное свидетельство):</th><td colspan="2">{{ number }}</td></tr>
+    {% endif %}
     {% if policy_type == '3' %}
     <tr><th>Полис ДМС:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
