--- a/blueprints/site/templates/site/lpu.html
+++ b/blueprints/site/templates/site/lpu.html
@@ -1,6 +1,7 @@
 {% extends "site/base.html" %}
 
 {% block content %}
+{% if hospitals_list %}
 <div class="alert alert-info"><h4>Выбор ЛПУ</h4>Выберите медицинское учреждение из списка ниже.</div>
 <div class="row-fluid">
     <div class="span12">
@@ -13,5 +14,8 @@
         </ul>
     </div>
 </div>
+{% else %}
+    <div class="alert alert-error">Данные по медицинским учреждениям выбранного муниципального образования отсутствуют, попробуйте зайти на страницу позже или выберите другое муниципальное образование.</div>
+{% endif %}
 <a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">Вернуться</a>
 {% endblock %}
