--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -97,3 +97,12 @@ ul.inline>li>label{
 .well .table{
     margin-bottom: 5px;
 }
+.search-form .control-label {
+    float: left;
+    width: 200px;
+    padding-top: 5px;
+    text-align: right;
+}
+.search-form .controls {
+    margin-left: 220px;
+}
