--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -33,7 +33,7 @@
     {% endif %}
     {% endif %}
     <tr><th colspan="3"><h4>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h4></th></tr>
-    <tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }},<br/>{% if lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %},<br/>телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
+    <tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }},<br/>{% if lpu|attr('buildings') and lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %},<br/>телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
     <tr><th>Врач:</th><td colspan="2">
         {% set doctor=session.get('doctor') %}
         {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}<br/>({{ doctor.get('speciality') }})
@@ -46,8 +46,8 @@
 <br />
 <div class="no_print" class="form-horizontal">
     <div class="row-fluid no_print">
-        <div class="span1 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();">Распечатать</button></div>
-        <div class="span1 offset10 no_print"><a href="{{ url_for('.index') }}" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём">Готово</a></div>
+        <div class="span1 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();"><i class="icon-print icon-white"></i> Распечатать</button></div>
+        <div class="span1 offset10 no_print"><a href="{{ url_for('.index') }}" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём"><i class="icon-ok icon-white"></i> Готово</a></div>
     </div>
 </div>
 </div>
