--- a/blueprints/site/templates/site/_ticket.html
+++ b/blueprints/site/templates/site/_ticket.html
@@ -3,7 +3,7 @@
 <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
 </thead>
 <tbody>
-<tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }}, {% if lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %}, телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
+<tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }}, {% if lpu|attr('buildings') and lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %}, телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
 <tr><th>Врач:</th><td colspan="2">
     {% set doctor=session.get('doctor') %}
     {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }} ({{ doctor.get('speciality') }})
