--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -110,6 +110,8 @@ ul.inline>li>label{
 }
 .search-form .controls {
     margin-left: 220px;
+}
+
 ol.prog_trckr, ul.prog_trckr_subscr {
     margin: 0px 0px 0px 0px;
     padding: 0;
