--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -49,7 +49,7 @@ body.loading .loader {
 th.th-centered{
     text-align: center;
 }
-blockquote {
+blockquote.red {
     border-color: #B94A48;
 }
 ul.upper_case li{
@@ -68,8 +68,8 @@ input#captcha_1{
     width: 56px;
 }
 .no-vmargin{
-    margin-top:0;
-    margin-bottom: 0;
+    margin-top:0!important;
+    margin-bottom: 0!important;
 }
 #doc_example{
     position: absolute;
@@ -99,10 +99,10 @@ ul.inline>li>label{
 }
 .search-form .control-label {
     float: left;
-    width: 200px;
+    width: 210px;
     padding-top: 5px;
     text-align: right;
 }
 .search-form .controls {
-    margin-left: 220px;
+    margin-left: 230px;
 }
