--- a/blueprints/site/templates/site/search.html
+++ b/blueprints/site/templates/site/search.html
@@ -54,8 +54,8 @@
 </div>
 
 <div class="row-fluid" id="search_result_row">
-    <div class="alert alert-error hide span12" title="Ошибка поиска" id="error"></div>
-    <div class="span12" id="search_result"></div>
+    <div class="alert alert-error hide" title="Ошибка поиска" id="error"></div>
+    <div id="search_result"></div>
 </div>
 <a href="{{ request.referrer }}" class="btn btn-large"><i class="icon-arrow-left"></i> Вернуться</a>
 {% endblock %}
